--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "mern(first-project)",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "server.js",
   "type": "module",
   "scripts": {
     "dev": "NODE_ENV=development nodemon backend/server.js",
-    "build": "npm install && npm install --prefix frontend && npm run build --prefix frontend",
+    "build": "npm install && npm install --prefix FrontEnd && npm run build --prefix FrontEnd",
     "start": "NODE_ENV=production node backend/server.js"
   },
   "keywords": [],
